--- a/.gitignore
+++ b/.gitignore
@@ -7,15 +7,15 @@
 # .idea
 
 # netbeans project files
-nbproject
+# nbproject
 
 # zend studio for eclipse project files
-.buildpath
-.project
-.settings
+# .buildpath
+# .project
+# .settings
 
 # windows thumbnail cache
-Thumbs.db
+# Thumbs.db
 
 # composer vendor dir
 # /vendor
@@ -27,7 +27,7 @@ Thumbs.db
 # composer.lock
 
 # Mac DS_Store Files
-.DS_Store
+# .DS_Store
 
 # phpunit itself is not needed
 # phpunit.phar
